--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -6,11 +6,26 @@
 {% endblock %}
 
 {% block body %}
+<section class="v-100">
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img src="https://img.freepik.com/free-vector/waiters-concept-illustration_114360-2908.jpg?w=1060&t=st=1684266496~exp=1684267096~hmac=5f7ce09bf9265ee365e209700bfa6258f97461744c5fa1aec14eab988542d737"
+            class="img-fluid" alt="Sample image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 <form method="post" action="{% url 'online_booking' %}">
     {% csrf_token %}
+    <span class="h1 fw-bold mb-0">Le chere</span>
+    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
+    <p>Number of available tables: {{ available_tables }}</p>
     {{ form.as_p }}
     <button class="btn btn-primary" type="submit">Add reservation</button>
 </form>
+</div>
+</div>
+</div>
+</section>
 {% endblock %}
 <script>
     (function() {
