Added lay out to mybookings.html

--- a/reservation/templates/mybookings.html
+++ b/reservation/templates/mybookings.html
@@ -7,24 +7,70 @@
 
 {% block body %}
 
+<section class="v-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5 offset-lg-2">
+          <div class="jumbotron jumbo-height">
+            <h1 class="display-4">My Bookings</h1>
+            <p>Edit or delete your bookings.</p>
+            <hr class="my-4">
+
 {% if online_bookings %}
 {% for booking in online_bookings %}
+<div class="card bg-dark text-white" style="border-radius: 1rem; margin: 3em;">
+    <div>
+      <div class="card-body">
+        <p class="text-white">
+          <i class="fa-solid fa-location-dot" style="color: #d7dae0;"></i>
+          Restaurant Le Chere
+        </p>
 <p> Username: {{ user }}</p>
-<p>{{ booking.date }} at {{ booking.time }}</p>
-{{ booking.no_of_guest.guest }} guest(s)
+<p class="text-white">
+    <i class="fa-solid fa-calendar-days" style="color: #e4e7ec;"></i>
+    {{ booking.date }} at {{ booking.time }}
+</p>
+<p class="text-white">
+    <i class="fa-solid fa-person" style="color: #cdd0d6;"></i>
+    {{ booking.no_of_guest.guest }} guest(s)
+</p>
+<p class="text-white">  
 {{ booking.occassion }}
+</p>
+<p class="text-white">  
 {{ booking.table }}
+</p>
+<p class="text-white">  
 {{ booking.special_request }}
+</p>
 {% if booking.approved %}
 <p>Booking Status: Approved</p>
 {% else %}
 <p>Booking Status: Pending </p>
 {% endif %}
-
-
-
-
-
-
+<button type="button" class="btn btn-secondary btn-sm"> Edit Booking </button>
+<button type="button" class="btn btn-secondary btn-sm"> Delete Booking </button>
+</div>
+</div>
+</div>
+{% endfor %}
+{% else %}
+<div class="row">
+    <div class="col text-center pt-5">
+      <div class="card pt-5 pb-5">
+        <h2>No bookings</h2>
+        <p class="pt-3 pb-3">Want to book a table?</p>
+        <div>
+          <a class="btn btn-info" href="{% url 'online_booking' %}">Book Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endif %}
+</div>
+</div>
+</div>
+</div>
+</section>
 
 {% endblock %}
