Added same orgin to settings.py

--- a/reservation/templates/mybookings.html
+++ b/reservation/templates/mybookings.html
@@ -13,7 +13,7 @@
         <div class="col-12 col-md-8 col-lg-6 col-xl-5 offset-lg-2">
           <div class="jumbotron jumbo-height">
             <h1 class="display-4">My Bookings</h1>
-            <p>Edit or delete your bookings.</p>
+            
             <hr class="my-4">
 
 {% if online_bookings %}
@@ -21,11 +21,17 @@
 <div class="card bg-dark text-white" style="border-radius: 1rem; margin: 3em;">
     <div>
       <div class="card-body">
-        <p class="text-white">
-          <i class="fa-solid fa-location-dot" style="color: #d7dae0;"></i>
-          Restaurant Le Chere
-        </p>
-<p> Username: {{ user }}</p>
+       
+<hr>
+<h3> My contact details: </h3>
+<p>  {{ booking.first_name }} {{ booking.last_name }}</p>
+<p> {{ user.email }} </p>
+<hr>
+<h3> Bookings details: </h3>
+<p class="text-white">
+  <i class="fa-solid fa-location-dot" style="color: #d7dae0;"></i>
+  Restaurant Le Chere
+</p>
 <p class="text-white">
     <i class="fa-solid fa-calendar-days" style="color: #e4e7ec;"></i>
     {{ booking.date }} at {{ booking.time }}
@@ -35,18 +41,26 @@
     {{ booking.no_of_guest.guest }} guest(s)
 </p>
 <p class="text-white">  
+  <i class="fa-solid fa-cake-candles" style="color: #cdd0d6;"></i>
 {{ booking.occassion }}
 </p>
-<p class="text-white">  
+<p class="text-white">
+  <i class="fa-solid fa-chair" style="color: #cdd0d6;"></i> 
 {{ booking.table }}
 </p>
 <p class="text-white">  
 {{ booking.special_request }}
 </p>
 {% if booking.approved %}
-<p>Booking Status: Approved</p>
+<p>
+  <i class="fa-solid fa-check" style="color: #cdd0d6;"></i>
+  Status: Approved
+</p>
 {% else %}
-<p>Booking Status: Pending </p>
+<p>
+  <i class="fa-solid fa-xmark" style="color: #cdd0d6;"></i>
+  Status: Pending 
+</p>
 {% endif %}
 <button type="button" class="btn btn-secondary btn-sm"> 
   <a class="btn btn-secondary" href="{% url 'edit_booking' booking.id %}">Edit Booking</a>
