--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,118 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Lato:wght@300&display=swap');
+h1 {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:rgb(121, 101, 77);
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 0px;
+    font-size: 30px;
+}
+h2 {
+    color:rgb(121, 101, 77);
+    font-family: Caveat, sans-serif;
+    text-align: center;
+    letter-spacing: 0px;
+    font-size: 30px;
+}
+form {
+	margin:10% auto 0 auto;
+	padding:30px;
+	width:400px;
+	height:auto;
+	overflow:hidden;
+	background:white;
+	border-radius:10px;
+}
+
+form label {
+	font-size:14px;
+	color:darkgray;
+	cursor:pointer;
+}
+
+form label,
+form input {
+	float:left;
+	clear:both;
+}
+
+form input, select, textarea {
+	margin:15px 0;
+	padding:15px 10px;
+	width:100%;
+	outline:none;
+	border:1px solid #bbb;
+	border-radius:20px;
+	display:inline-block;
+	-webkit-box-sizing:border-box;
+	   -moz-box-sizing:border-box;
+	        box-sizing:border-box;
+    -webkit-transition:0.2s ease all;
+	   -moz-transition:0.2s ease all;
+	    -ms-transition:0.2s ease all;
+	     -o-transition:0.2s ease all;
+	        transition:0.2s ease all;
+}
+
+form input, select, textarea [type=text]:focus,
+form input[type="password"]:focus {
+	border-color:cornflowerblue;
+}
+
+input[type=submit] {
+	padding:15px 50px;
+	width:auto;
+	background:#1abc9c;
+	border:none;
+	color:white;
+	cursor:pointer;
+	display:inline-block;
+	float:right;
+	clear:right;
+	-webkit-transition:0.2s ease all;
+	   -moz-transition:0.2s ease all;
+	    -ms-transition:0.2s ease all;
+	     -o-transition:0.2s ease all;
+	        transition:0.2s ease all;
+}
+
+input[type=submit]:hover {
+	opacity:0.8;
+}
+
+input[type="submit"]:active {
+	opacity:0.4;
+}
+#id_remember {
+	margin-top: -1em;
+    margin-left: -4em;
+}
+.accordion {
+	margin: 3em;
+}
+.like {
+    text-align: center;
+    display: inline-flex;
+    width: 1300px;
+    margin: 12px;
+    justify-content: space-between;
+}
+
+.like > li {
+    display: inline;
+    
+}
+
+.like i {
+    font-size: 250%;
+    margin: 0%;
+    padding: 0%;
+    color: silver;
+    
+}
+  
+ 
+
 .available-date {
     background-color: lightgreen;
 }
