Added avaliable tables today and max booking per day

--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
     <span class="h1 fw-bold mb-0">Le chere</span>
     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
-    <p>Number of available tables: {{ available_tables }}</p>
+    <p>Number of available tables today: {{ available_tables_today }}</p>
     {{ form.as_p }}
     <button class="btn btn-primary" type="submit">Add reservation</button>
 </form>
