Updated home page lay out, java script and css source code to text wrapper

--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -38,7 +38,7 @@
 </div>
 </section>
 {% endblock %}
-<script>
+<script type="text/javascript">
     (function() {
         var availableDates = {{ form.get_available_dates|safe }};
         var dateInput = document.getElementById("id_date");
