Added alt attribute to all img elements on home.html

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -8,7 +8,8 @@
 
  <!-- Introduction text, logo -->
   <div class="card text-bg-dark">
-    <img src="https://img.freepik.com/free-photo/lifestyle-portrait-elegant-young-woman-with-dark-wavy-hairstyle-trendy-makeup-fashionable-beige-pullover-coat-sitting-cafe-terrace-drinking-coffee-from-white-cup_197531-24448.jpg?size=626&ext=jpg" class="card-img" alt="...">
+    <img src="https://img.freepik.com/free-photo/lifestyle-portrait-elegant-young-woman-with-dark-wavy-hairstyle-trendy-makeup-fashionable-beige-pullover-coat-sitting-cafe-terrace-drinking-coffee-from-white-cup_197531-24448.jpg?size=626&ext=jpg" class="card-img" 
+    alt="Women wit a cup">
     <div class="card-img-overlay">
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <p>Welcome to</p>
@@ -27,7 +28,7 @@
   <div class="card-group">
     <div class="col">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/croissant-basket-with-cloth-wooden-table-flat-lay_176474-8128.jpg?size=626&ext=jpg" class="card-img-top" alt="spacial-offers">
+        <img src="https://img.freepik.com/free-photo/croissant-basket-with-cloth-wooden-table-flat-lay_176474-8128.jpg?size=626&ext=jpg" class="card-img-top" alt="Croissant">
         <div class="card-body">
           <h5 class="card-title">Croissant</h5>
           <p class="card-text">6.99 $</p>
@@ -37,7 +38,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/roasted-pumpkin-carrot-soup-with-cream-seeds-fresh-green-ceramic-bowl-top-view_114579-1660.jpg?size=626&ext=jpg" class="card-img-top" alt="special_offers">
+        <img src="https://img.freepik.com/free-photo/roasted-pumpkin-carrot-soup-with-cream-seeds-fresh-green-ceramic-bowl-top-view_114579-1660.jpg?size=626&ext=jpg" class="card-img-top" alt="Shellfish soup">
         <div class="card-body">
           <h5 class="card-title">Shellfish soup</h5>
           <p class="card-text">15.95 $</p>
@@ -47,7 +48,8 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/fresh-salad-with-vegetables-tomatoes-red-onions-lettuce-quail-eggs-healthy-food-diet-concept-vegetarian-food_2829-20246.jpg?w=1060&t=st=1684621258~exp=1684621858~hmac=2f7cb47142401da69f0fd75103c14a30eda0a833348576485ce938c824033d4c" class="card-img-top" alt="special_offers">
+        <img src="https://img.freepik.com/free-photo/fresh-salad-with-vegetables-tomatoes-red-onions-lettuce-quail-eggs-healthy-food-diet-concept-vegetarian-food_2829-20246.jpg?w=1060&t=st=1684621258~exp=1684621858~hmac=2f7cb47142401da69f0fd75103c14a30eda0a833348576485ce938c824033d4c" 
+        class="card-img-top" alt="Salade de Chèvre">
         <div class="card-body">
           <h5 class="card-title">Salade de Chèvre</h5>
           <p class="card-text">12.95 $</p>
@@ -65,7 +67,7 @@
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&w=600"
-                   alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                   alt="French meal" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
@@ -118,10 +120,12 @@
         </p>
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <img src="https://img.freepik.com/free-photo/closeup-shot-tasty-shrimp-tempura-with-sauce-white-background_181624-60475.jpg?w=1060&t=st=1684619092~exp=1684619692~hmac=214ac0dfbafdd7ecf1718ab6b4fdaeeb5703363111fb91ed3e2792b687b00d20" style="border-radius: 2em; width: 90%;">
+        <img src="https://img.freepik.com/free-photo/closeup-shot-tasty-shrimp-tempura-with-sauce-white-background_181624-60475.jpg?w=1060&t=st=1684619092~exp=1684619692~hmac=214ac0dfbafdd7ecf1718ab6b4fdaeeb5703363111fb91ed3e2792b687b00d20" 
+        alt="starter meal" style="border-radius: 2em; width: 90%;">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <img src="https://img.freepik.com/free-photo/assortment-spanish-pintxos-isolated-white-background_123827-22327.jpg?t=st=1684619194~exp=1684619794~hmac=3781c6374a19d470d88320aa32592e659769c62a602fbbb7ec2fc7949fb951d1" style="border-radius: 2em; width: 90%;">
+        <img src="https://img.freepik.com/free-photo/assortment-spanish-pintxos-isolated-white-background_123827-22327.jpg?t=st=1684619194~exp=1684619794~hmac=3781c6374a19d470d88320aa32592e659769c62a602fbbb7ec2fc7949fb951d1" 
+        alt="starter meal" style="border-radius: 2em; width: 90%;">
       </div>
     </div>
   </div>
@@ -134,7 +138,7 @@
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://img.freepik.com/free-photo/female-chef-carefully-pouring-sauce-dish_23-2148763167.jpg?size=626&ext=jpg"
-                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                alt="female chef" class="img-fluid" style="border-radius: 1rem 0 0 1rem;">
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
