--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,7 +12,7 @@
     alt="Women wit a cup">
     <div class="card-img-overlay">
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <p>Welcome to</p>
+        <h3>Welcome to</h3>
         <br>
           <h3 class="ml1 fs-1">
             <span class="text-wrapper">
