--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -67,7 +67,7 @@
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&w=600"
-                   alt="French meal" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                   alt="French meal" class="img-fluid" style="border-radius: 1rem 0 0 1rem;">
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
