--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -156,7 +156,7 @@
     </div>
   </div>
   <br><br><br><br>
-  <script type="text/javascript">
+  <script>
   var textWrapper = document.querySelector('.ml1 .letters');
   textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
 
