--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,19 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block head %}
-<title>Log in </title>
 {% endblock %}
-
-
-
-
 {% load i18n %}
 {% load account socialaccount %}
-
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block body %}
-
 <section class="v-100">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -22,28 +14,23 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-0">
-  
       <form class="login" method="POST" action="{% url 'account_login' %}">
         <h2 class="fw-bold mb-2 text-uppercase">{% trans "Sign In" %}</h2>
         <p class="text-white-50 mb-5">Please login to your account</p>
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
         {% endif %}
-       
-       
         <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-         
-       
         <div class="d-flex align-items-center justify-content-center pb-4">
           <p class="mb-0 me-2">Don't have an account?</p>
-          <button type="button" class="btn btn-outline-danger"><a href="{% url 'account_signup' %}" class="text-white-50 fw-bold">Create new</a></button>
+          <button type="button" class="btn btn-outline-danger">
+            <a href="{% url 'account_signup' %}" class="text-white-50 fw-bold">Create new</a>
+          </button>
         </div>
       </form>
     </div>
-  </div>
-  
   </div>
 </section>
 {% endblock %}
