--- a/templates/base.html
+++ b/templates/base.html
@@ -53,8 +53,12 @@
                         </li>
                         {% else %}
                         <div class="d-grid gap-2 d-md-block">
-                            <button class="btn btn-primary" type="button"> <a class="btn btn-primary" href="{% url 'account_signup' %}">Sign Up</a></button>
-                            <button class="btn btn-primary" type="button"> <a class="btn btn-primary" href="{% url 'account_login' %}">Login</a></button>
+                            <button class="btn btn-primary" type="button">
+                                <a class="btn btn-primary" href="{% url 'account_signup' %}">Sign Up</a>
+                            </button>
+                            <button class="btn btn-primary" type="button">
+                                <a class="btn btn-primary" href="{% url 'account_login' %}">Login</a>
+                            </button>
                         </div>   
                         {% endif %}
                     </ul>
