--- a/templates/base.html
+++ b/templates/base.html
@@ -53,8 +53,8 @@
                         </li>
                         {% else %}
                         <li class="d-grid gap-2 d-md-block">
-                            <a class="btn btn-primary" type="button" href="{% url 'account_signup' %}">Sign Up</a>
-                            <a class="btn btn-primary" type="button" href="{% url 'account_login' %}">Login</a>
+                            <a class="btn btn-primary" role="button" href="{% url 'account_signup' %}">Sign Up</a>
+                            <a class="btn btn-primary" role="button" href="{% url 'account_login' %}">Login</a>
                         </li>   
                         {% endif %}
                     </ul>
