Removed a element from button sign up and log in

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,11 +53,11 @@
                         </li>
                         {% else %}
                         <li class="d-grid gap-2 d-md-block">
-                            <button type="button" class="btn btn-primary"> 
-                                <a class="btn btn-primary" href="{% url 'account_signup' %}">Sign Up</a>
+                            <button type="button" class="btn btn-primary" href="{% url 'account_signup' %}"> 
+                                Sign Up
                             </button>
-                            <button type="button" class="btn btn-primary">
-                                <a class="btn btn-primary" href="{% url 'account_login' %}">Login</a>
+                            <button type="button" class="btn btn-primary" href="{% url 'account_login' %}">
+                                Login
                             </button>    
                         </li>   
                         {% endif %}
