--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -26,7 +26,7 @@
         <div class="d-flex align-items-center justify-content-center pb-4">
           <p class="mb-0 me-2">Don't have an account?</p>
           <button type="button" class="btn btn-outline-danger">
-            <a href="{% url 'account_signup' %}" class="text-white-50 fw-bold">Create new</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-outline-primary">Create new</a>
           </button>
         </div>
       </form>
