Added text-center to card body special offers in home.html

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -29,7 +29,7 @@
     <div class="col">
       <div class="card">
         <img src="https://img.freepik.com/free-photo/croissant-basket-with-cloth-wooden-table-flat-lay_176474-8128.jpg?size=626&ext=jpg" class="card-img-top" alt="Croissant">
-        <div class="card-body">
+        <div class="card-body text-center">
           <h5 class="card-title">Croissant</h5>
           <p class="card-text">6.99 $</p>
           <a href="{% url 'menu' %}" class="btn btn-primary">See Our Menu</a>
@@ -39,7 +39,7 @@
     <div class="col">
       <div class="card">
         <img src="https://img.freepik.com/free-photo/roasted-pumpkin-carrot-soup-with-cream-seeds-fresh-green-ceramic-bowl-top-view_114579-1660.jpg?size=626&ext=jpg" class="card-img-top" alt="Shellfish soup">
-        <div class="card-body">
+        <div class="card-body text-center">
           <h5 class="card-title">Shellfish soup</h5>
           <p class="card-text">15.95 $</p>
           <a href="{% url 'menu' %}" class="btn btn-primary">See Our Menu</a>
@@ -50,7 +50,7 @@
       <div class="card">
         <img src="https://img.freepik.com/free-photo/fresh-salad-with-vegetables-tomatoes-red-onions-lettuce-quail-eggs-healthy-food-diet-concept-vegetarian-food_2829-20246.jpg?w=1060&t=st=1684621258~exp=1684621858~hmac=2f7cb47142401da69f0fd75103c14a30eda0a833348576485ce938c824033d4c" 
         class="card-img-top" alt="Salade de Chèvre">
-        <div class="card-body">
+        <div class="card-body text-center">
           <h5 class="card-title">Salade de Chèvre</h5>
           <p class="card-text">12.95 $</p>
           <a href="{% url 'menu' %}" class="btn btn-primary">See Our Menu</a>
