--- a/templates/base.html
+++ b/templates/base.html
@@ -67,14 +67,22 @@
         </nav>
     </header> 
         <!--Messages Start-->
-        {% if messages %}
+       
         {% for message in messages %}
-            <div class="alert alert-success  alert-dismissible fade show text-center " role="alert">
-                <h3 class="display-3">{{ message }}</h3>
+       
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+            <div class="alert {{ message.tags }}  alert-dismissible fade show text-center " role="alert">
+                <h3 class="display-3">{{ message | safe }}</h3>
                 <button type="button" class="btn-close fs-1 position-absolute top-50 start-0 translate-middle-y" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-        {% endfor %}
-        {% endif %}
+            {% endfor %} 
+        </div>    
+            </div>  
+        </div>   
+     
+      
         <!--Messages End-->
     {% block body %}
     {% endblock %}
@@ -123,5 +131,12 @@
             </div>
         </div>
     </footer>
+    <script>
+        setTimeout(function () {
+            let messages = document.getElementById('msg');
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 2000);
+    </script>
   </body>
 </html>
