Added url home to a element logo nav base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar bg-white navbar-white navbar-expand-lg shadow-sm">
             <div class="container-fluid">
-                <a class="navbar-brand  cHover cGreen fs-2" href="#">
+                <a class="navbar-brand  cHover cGreen fs-2" href="{% url 'home' %}">
                     <i class="fa-solid fa-utensils" style="color: #511f50;"></i>  Le chère 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
