Added objects menu to views and tempalte menu.html

--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -3,19 +3,20 @@
 {% block head %}
 {% endblock %}
 {% block body %}
+{% for menu in menus %}
 <section class="v-100" style="background-color: black;">
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://img.freepik.com/free-photo/side-view-spaghetti-with-greens-ricotta-cheese-round-white-plate_176474-3223.jpg?w=826&t=st=1684329937~exp=1684330537~hmac=26f2fc57e209701587a687962dc5a7cde405afd224d58dc66ce827ffc20b0d1a"
-            class="img-fluid" alt="Sample image">
+          <img src="{{ menu.featured_image.url }}"
+            class="img-fluid" alt="Featured Image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 text-white">
             <div>
-                <h2>Main Dishes</h2>
-                <p>Cuisses de Grenouille_____________________________ 16.95 $</p>
-                <p>(frog's legs) </p>
-               
+                <h2>{{ menu.title }}</h2>
+                <p>{{ menu.mealName }}_____________________________ {{ menu.price }} $</p>
+                <p>{{ menu.mealDescription }} </p>
+               <!--
                 <p>Soupe de Poissons _______________________________ 16.95 $</p>
                 <p>Fish Soup</p>
                 
@@ -30,7 +31,9 @@
                
                 <p>Poulet Basquaise ________________________________ 14.95 $</p>
                 <p>(Basque Chicken Stew)</p>
+                -->
             </div>
+            {% endfor %}
         </div>
       </div>
     </div>
