--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -15,14 +15,14 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-<form method="post" action="{% url 'online_booking' %}">
+<form method="post" action="{% url 'choose_time' %}">
     {% csrf_token %}
     <span class="h1 fw-bold mb-0">Le chere</span>
     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
    
     
     {{ form | crispy }}
-    <button class="btn btn-primary" type="submit">Add reservation</button>
+    <button class="btn btn-primary" type="submit">Select time</button>
 </form>
 {% if form.date.value %}
   <h3>Available Time Slots for {{ form.date.value }} </h3>
