--- a/reservation/templates/choose_time.html
+++ b/reservation/templates/choose_time.html
@@ -1,10 +1,27 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+{% endblock %}
+
+{% block body %}
 {% if time_slots %}
 <h1>Aviliable time for {{ date }}</h1>
+<form method="POST" action="{% url 'mybookings' %}">
+    {% csrf_token %}
 <ul>
     {% for time_slot in time_slots %}
-    <li>{{ time_slot.time }}</li>
+    <li>
+        <button type="submit" name="time_slot" value="{{ time_slot.id }}">
+        {{ time_slot.time }}
+        </button>
+    </li>
+    {% empty %}
+    <li>No available time slots for the selected date.</li>
 {% endfor %}
 </ul>
+</form>
 {% else %}
-    <li>No available time slots for the selected date.</li>
+   <p>No available time slots for the selected date</p>
 {% endif %}
+{% endblock %}
