Removed choose time in seperate template and define time in online booking template instead

--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -15,27 +15,16 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-<form method="post" action="{% url 'choose_time' %}">
+<form method="post" action="{% url 'mybookings' %}">
     {% csrf_token %}
     <span class="h1 fw-bold mb-0">Le chere</span>
     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
    
     
     {{ form | crispy }}
-    <button class="btn btn-primary" type="submit">Select time</button>
+    <button class="btn btn-primary" type="submit"> Add reservation </button>
 </form>
-{% if form.date.value %}
-  <h3>Available Time Slots for {{ form.date.value }} </h3>
-  {% if available_slots %}
-  <ul>
-    {% for time_slot, remaining_slots in available_slots %}
-      <li>{{ time_slot }} - Remaining tables to be booked: {{ remaining_slots }}</li>
-    {% endfor %}
-  </ul>
-{% else %}
-  <p>No available time slots at the moment.</p>
-{% endif %}
-{% endif %}
+
 </div>
 </div>
 </div>
