Created modles avaliable time, number people, reservation, customer in models.py booking_system

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                             <a class="nav-link active cHover" href="{% url 'menu' %}">Our Menu</a>
                         </li>       
                         <li class="nav-item">
-                            <a class="nav-link active cHover" href="{% url 'online_booking' %}">Online Booking</a>
+                            <a class="nav-link active cHover" href="{% url 'book_a_table' %}">Online Booking</a>
                         </li>                   
                         {% if user.is_authenticated %}
                         <!--Clinic Staff Link-->
