Added choose date view

--- a/booking_system/templates/choose_date.html
+++ b/booking_system/templates/choose_date.html
@@ -20,7 +20,7 @@
     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
    
     
-    {{ date_form.date | crispy }}
+    {{ date_form.date }}
     <button class="btn btn-primary" type="submit"> Select Time </button>
 </form>
 </div>
