--- a/booking_system/templates/choose_date.html
+++ b/booking_system/templates/choose_date.html
@@ -14,7 +14,7 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-<form method="post" action="#">
+<form method="post" action="{% url 'select_time' %}">
     {% csrf_token %}
     <span class="h1 fw-bold mb-0">Le chere</span>
     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Book a table</h5>
