--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,10 @@
                             <a class="nav-link active cHover" href="{% url 'menu' %}">Our Menu</a>
                         </li>       
                         <li class="nav-item">
-                            <a class="nav-link active cHover" href="{% url 'choose_date' %}">Online Booking</a>
+                            <a class="nav-link active cHover" href="{% url 'choose_date' %}">Book a table</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link active cHover" href="{% url 'online_booking' %}">Online Booking</a>
                         </li>                   
                         {% if user.is_authenticated %}
                         <!--Clinic Staff Link-->
