--- a/menu/templates/meal.html
+++ b/menu/templates/meal.html
@@ -1,4 +1,33 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block head %}
+{% endblock %}
+{% block body %}
 {% for meal in meals %}
-<h1>{{ meal.name }}</h1>
-{% endfor %}
+<section class="v-100 bg-black">
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img src="{{ menu.featured_image.url }}"
+            class="img-fluid" alt="Featured Image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 text-white">
+            <div>
+                <h2 >{{ menu.title }}</h2>
+                
+                <h5 class="text-wrapper" style="color: gold;">{{ meal.mealName }}</h5>
+                <p>_______________________________________________________________ {{ meal.price }} $</p>
+                <p class="text-white">({{ meal.mealDescription }})</p>
+             <br>
+             
+            </div>
+            
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </section>
+ 
+{% endblock %}
+
 
