--- a/menu/templates/meal.html
+++ b/menu/templates/meal.html
@@ -3,30 +3,50 @@
 {% block head %}
 {% endblock %}
 {% block body %}
-{% for meal in meals %}
-<section class="v-100 bg-black">
+<h1 class="text-center"> Please, choose the menu from fellowing bellow: </h1>
+<br><br><br>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+   
+    {% for menu in menus %}
+    <div class="col">
+        <a href="{% url 'meal' menu.id %}">
+    <img src="{{ menu.featured_image.url }}" alt="{{ menu.title }}" class="img-fluid card" style="width:30em; height: 22em; border-radius: 1em;" >
+        </a>
+    <h1> {{ menu.title }} </h1>
+    
+</div>
+{% endfor %}
+ 
+
+
+</div>
+<br><br><br>
+
+
+
+<section class="v-100 bg-white">
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
           <img src="{{ menu.featured_image.url }}"
             class="img-fluid" alt="Featured Image">
         </div>
-        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 text-white">
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 text-black">
             <div>
                 <h2 >{{ menu.title }}</h2>
-                
+                {% for meal in meals %}
                 <h5 class="text-wrapper" style="color: gold;">{{ meal.mealName }}</h5>
                 <p>_______________________________________________________________ {{ meal.price }} $</p>
-                <p class="text-white">({{ meal.mealDescription }})</p>
+                <p class="text-black">({{ meal.mealDescription }})</p>
              <br>
-             
+             {% endfor %}
             </div>
             
         </div>
       </div>
     </div>
-    {% endfor %}
-  </section>
+
+</section>
  
 {% endblock %}
 
