--- a/menu/templates/meal.html
+++ b/menu/templates/meal.html
@@ -3,27 +3,9 @@
 {% block head %}
 {% endblock %}
 {% block body %}
-<h1 class="text-center"> Please, choose the menu from fellowing bellow: </h1>
+
+
 <br><br><br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-   
-    {% for menu in menus %}
-    <div class="col">
-        <a href="{% url 'meal' menu.id %}">
-    <img src="{{ menu.featured_image.url }}" alt="{{ menu.title }}" class="img-fluid card" style="width:30em; height: 22em; border-radius: 1em;" >
-        </a>
-    <h1> {{ menu.title }} </h1>
-    
-</div>
-{% endfor %}
- 
-
-
-</div>
-<br><br><br>
-
-
-
 <section class="v-100 bg-white">
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -47,6 +29,27 @@
     </div>
 
 </section>
+<br><br><br>
+<h1 class="text-center"> Please, choose the menu from fellowing bellow: </h1>
+<br><br><br>
+<div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="row row-cols-1 row-cols-md-3 g-4">
+   
+    {% for menu in menus %}
+    <div class="col">
+        <a href="{% url 'meal' menu.id %}">
+    <img src="{{ menu.featured_image.url }}" alt="{{ menu.title }}" class="img-fluid card" style="width:30em; height: 22em; border-radius: 1em;" >
+        </a>
+    <h1> {{ menu.title }} </h1>
+    
+</div>
+{% endfor %}
+ 
+
+</div>
+</div>
+<br><br><br>
+
  
 {% endblock %}
 
