Added images to 404 and 500 error page

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,4 +2,6 @@
 
 {% block content %}
 
+
+<img src="https://img.freepik.com/free-vector/oops-404-error-with-broken-robot-concept-illustration_114360-5529.jpg?w=826&t=st=1689201604~exp=1689202204~hmac=74187277838113877e33953db2bc02252ea562ac12de7ae7782f5a6645febc50">
 {% endblock %}
